--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -1,5 +1,17 @@
 <div class="home-container">
-    <header>拉勾网</header>
+    <header>
+        <div class="mob-header-content">
+            <a href="##" id="JS_header_logo" class="logo">
+                <span></span>
+            </a>
+            <div class="search-from">
+                <p>搜索商品</p>    
+            </div>
+            <a href="##" id="JS_header_region" class="location">
+                <span>北京</span>
+            </a>
+        </div>
+    </header>
     <main></main>
     <nav>
         <ul>
