--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -17,11 +17,15 @@
         <ul>
             <li class="active">
                 <i class="yo-ico">&#xe6b8;</i>
-                <b>职位2</b>
+                <b>首页</b>
             </li>
             <li>
                 <i class="yo-ico">&#xe65c;</i>
-                <b>搜索</b>
+                <b>分类</b>
+            </li>
+            <li>
+                <i class="yo-ico">&#xe7d5;</i>
+                <b>购物车</b>
             </li>
             <li>
                 <i class="yo-ico">&#xe7d5;</i>
