--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -11,9 +11,37 @@
                 <span>北京</span>
             </a>
         </div>
+        <nav class="mob-header-nav">
+            <ul>
+                <li class="avtive">
+                    <a href="##">首页</a>
+                </li>
+                <li>
+                    <a href="##">新品</a>
+                </li>
+                <li>
+                    <a href="##">现货特卖</a>
+                </li>
+                <li>
+                    <a href="##">沙发</a>
+                </li>
+                <li>
+                    <a href="##">床</a>
+                </li>
+                <li>
+                    <a href="##">床垫</a>
+                </li>
+                <li>
+                    <a href="##">实木家具</a>
+                </li>
+                <li>
+                    <a href="##">地板</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main></main>
-    <nav>
+    <nav class="navfooter">
         <ul>
             <li class="active">
                 <i class="yo-ico">&#xe6b8;</i>
