--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -44,19 +44,19 @@
     <nav class="navfooter">
         <ul>
             <li class="active">
-                <i class="yo-ico">&#xe6b8;</i>
+                <i class="yo-ico">&#xe64f;</i>
                 <b>首页</b>
             </li>
             <li>
-                <i class="yo-ico">&#xe65c;</i>
+                <i class="yo-ico">&#xe685;</i>
                 <b>分类</b>
             </li>
             <li>
-                <i class="yo-ico">&#xe7d5;</i>
+                <i class="yo-ico">&#xe63f;</i>
                 <b>购物车</b>
             </li>
             <li>
-                <i class="yo-ico">&#xe7d5;</i>
+                <i class="yo-ico">&#xe659;</i>
                 <b>我的</b>
             </li>
         </ul>
