--- a/src/scripts/views/profile.html
+++ b/src/scripts/views/profile.html
@@ -1,3 +1,28 @@
-<div>
-  profile...
+<div class="profilemain">
+  <header class="mll-header">
+    <div class="viewport">
+      <div class="laye-back"> 
+        <i class="yo-ico">&#xe660;</i>
+      </div>
+      <div class="laye-middle">
+        购物车
+      </div>
+      <div class="laye-nav">
+        <i class="yo-ico">&#xe655;</i>
+      </div>
+    </div>
+  </header>
+  <main class="mll-main">
+
+  </main>
+  <footer class="mll-footer">
+    <div class="btns">
+      <div class="btns-app">下载APP</div>
+      <div class="btns-pc">电脑版</div>
+    </div>
+    <div class="icp">
+      <p>天津美维信息技术有限公司</p>
+      <p>ICP备案证书号：粤ICP备08008334号</p>
+    </div>
+  </footer>
 </div>
