--- a/src/scripts/views/admin.html
+++ b/src/scripts/views/admin.html
@@ -1,3 +1,8 @@
-<div>
-    admin...
+<div class="adminmain">
+    <header class="ad-header">
+        <i class="yo-ico">&#xe660;</i>
+    </header>
+    <main class="ad-main">
+        admin...
+    </main>
 </div>
