--- a/src/scripts/views/profile.html
+++ b/src/scripts/views/profile.html
@@ -8,12 +8,19 @@
         购物车
       </div>
       <div class="laye-nav">
-        <i class="yo-ico">&#xe655;</i>
+        <i class="yo-ico">&#xe609;</i>
       </div>
     </div>
   </header>
   <main class="mll-main">
-
+    <div class="mll-main-header">
+      <a href="##">登录</a>
+      <span>后，您可以同步电脑和手机购物车中的商品</span>
+    </div>
+    <div class="mll-main-contend">
+      <div>您还没有加入任何商品</div>
+      <a href="##">随便逛逛</a>
+    </div>
   </main>
   <footer class="mll-footer">
     <div class="btns">
