--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,4 +4,6 @@
 
 @import "./modules/position.scss";
 
-@import "./modules/profile.scss"
+@import "./modules/profile.scss";
+
+@import "./modules/admin.scss";
