--- a/src/scripts/views/admin.html
+++ b/src/scripts/views/admin.html
@@ -3,6 +3,27 @@
         <i class="yo-ico">&#xe660;</i>
     </header>
     <main class="ad-main">
-        admin...
+        <div class="ad-userlogin"></div>
+        <div class="ad-usernav">
+            <span>密码登录</span>
+        </div>
+        <div class="ad-userlog">
+            <div class="ad-usertype">
+                <ul>
+                    <li>
+                        <i class="yo-ico">&#xe659;</i>
+                        <input type="text" placeholder="请输入用户名/手机号/邮箱">
+                    </li>
+                    <li>
+                        <i class="yo-ico">&#xe661;</i>
+                        <input type="text" placeholder="请输入密码">
+                    </li>
+                </ul>
+            </div>
+            <div class="ad-attr">
+                <a href="##">登录</a>
+                <span>注册</span> 
+            </div>
+        </div>
     </main>
 </div>
