--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -14,28 +14,28 @@
         <nav class="mob-header-nav">
             <ul>
                 <li class="avtive">
-                    <a href="##">首页</a>
+                    <a>首页</a>
                 </li>
                 <li>
-                    <a href="##">新品</a>
+                    <a>新品</a>
                 </li>
                 <li>
-                    <a href="##">现货特卖</a>
+                    <a>现货特卖</a>
                 </li>
                 <li>
-                    <a href="##">沙发</a>
+                    <a>沙发</a>
                 </li>
                 <li>
-                    <a href="##">床</a>
+                    <a>床</a>
                 </li>
                 <li>
-                    <a href="##">床垫</a>
+                    <a>床垫</a>
                 </li>
                 <li>
-                    <a href="##">实木家具</a>
+                    <a>实木家具</a>
                 </li>
                 <li>
-                    <a href="##">地板</a>
+                    <a>地板</a>
                 </li>
             </ul>
         </nav>
