--- a/src/scripts/views/register.html
+++ b/src/scripts/views/register.html
@@ -8,21 +8,24 @@
             <div class=re-content>
                 <ul>
                     <li>
-                        <i class="yo-ico">&#xe659;</i>
-                        <input type="text" placeholder="请输入手机号">
+                        <i class="yo-ico il">&#xe659;</i>
+                        <input type="text" class="ti" id="moblie" placeholder="请输入手机号">
+                        <i class="yo-ico ir">&#xe664;</i>
                     </li>
                     <li>
-                        <i class="yo-ico">&#xe64b;</i>
-                        <input type="text" placeholder="请设置登录密码">
+                        <i class="yo-ico il">&#xe64b;</i>
+                        <input type="password" class="ti" id="password" placeholder="请设置登录密码">
+                        <i class="yo-ico ir">&#xe664;</i>
                     </li>
                     <li>
-                        <i class="yo-ico">&#xe661;</i>
-                        <input type="text" placeholder="请重新输入密码">
+                        <i class="yo-ico il">&#xe661;</i>
+                        <input type="password" class="ti" id="confirm_password" placeholder="请重新输入密码">
+                        <i class="yo-ico ir">&#xe664;</i>
                     </li>
                 </ul>
             </div>
             <div class="re-btn">
-                <a href="##">立即注册</a>
+                <a id="register">立即注册</a>
             </div>
         </div>
     </div>
