--- a/src/scripts/views/profile.html
+++ b/src/scripts/views/profile.html
@@ -14,12 +14,12 @@
   </header>
   <main class="mll-main">
     <div class="mll-main-header">
-      <a href="##">登录</a>
+      <a>登录</a>
       <span>后，您可以同步电脑和手机购物车中的商品</span>
     </div>
     <div class="mll-main-contend">
       <div>您还没有加入任何商品</div>
-      <a href="##">随便逛逛</a>
+      <a>随便逛逛</a>
     </div>
   </main>
   <footer class="mll-footer">
