--- a/src/scripts/views/new-goods.html
+++ b/src/scripts/views/new-goods.html
@@ -1,49 +1,162 @@
-<header>
-    <div>
-        <span class=""></span>
-        <input type="text" />
-        <span class=""></span>
-    </div>
-    <div>
-        <span>新品<i class=""></i></span>
-        <span>价格<i></i></span>
-        <span>筛选<i></i></span>
-        <span></span>
-    </div>
-</header>
-<nav>
-    <ul>
-        <li>美乐乐自营</li>
-        <li>销量</li>
-        <li>风格<i class=""></i></li>
-        <li>品牌<i class=""></i></li>
-    </ul>
-</nav>
-<main>
-    <ul>
-        <li>
-            <div>
-                <a href="##" alt="">
-                    <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
-                </a>
+<div class="newgoods">
+    <header class="listHead">
+        <div>
+            <span class="iconfont">&#xe660;</span>
+            <span><i class="iconfont">&#xe651;</i><input type="text" placeholder="搜索商品" /></span>
+            <span class="iconfont">&#xeeea;</span>
+        </div>
+    </header>
+    <nav class="nav1">
+        <ul>
+            <li>新品<i class="iconfont">&#xe65c;</i></li>
+            <li>
+                <span>价格</span>
+                <span>
+                    <i class="iconfont">&#xe65c;</i><i class="">&#xe65c;</i>
+                </span>
+            </li>
+            <li>筛选<i class="iconfont">&#xe608;</i></li>
+            <li>&#xe62e;</li>
+        </ul>
+    </nav>
+    <nav class="ceiling">
+        <ul>
+            <li>美乐乐自营</li>
+            <li>销量</li>
+            <li>
+                <span>风格</span>
+                <i class="iconfont">&#xe65c;</i>
+            </li>
+            <li>
+                <span>品牌</span>
+                <i class="iconfont">&#xe65c;</i>
+            </li>
+        </ul>
+    </nav>
+    <main class="mainStyle1">
+        <ul>
+            <li>
                 <div>
-                    <a href="##">
-                        <p>[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</p>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
                     </a>
-                    <p>￥7365</p>
-                    <p>已售<span>262</span></p>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
                 </div>
-            </div>
-        </li>
-    </ul>
-</main>
-<footer>
-    <div>
-        <span>下载APP</span>
-        <span>电脑版</span>
-    </div>
-    <div>
-        <p>天津美维信息技术有限公司</p>
-        <p>ICP备案证书号：粤ICP备08008334号</p>
-    </div>
-</footer>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="##" alt="">
+                        <img src="//img004.mllres.com/images/201611/1480046167680305533.jpg">
+                    </a>
+                    <div class="msg">
+                        <p class="msg-detail">
+                            <a href="##">[木彩] 北欧风格 橡胶木框架 附带书架收纳多功能儿童高低床 1.35米儿童组合床双层床（含固定三抽+梯柜）</a>
+                        </p>
+                        <p class="msg-price">￥7365</p>
+                        <p class="msg-sales">已售<span class="msg-sales-num">262</span></p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <div class="down-btn">
+            <span>下载APP</span>
+            <span>电脑版</span>
+        </div>
+        <div class="footMsg">
+            <p>天津美维信息技术有限公司</p>
+            <p>ICP备案证书号：粤ICP备08008334号</p>
+        </div>
+    </footer>
+</div>
