--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,3 +3,7 @@
 @import "./modules/home.scss";
 
 @import "./modules/position.scss";
+
+@import "./modules/newGoods.scss";
+
+@import "./modules/details.scss";
