--- a/src/scripts/views/register.html
+++ b/src/scripts/views/register.html
@@ -10,17 +10,17 @@
                     <li>
                         <i class="yo-ico il">&#xe659;</i>
                         <input type="text" class="ti" id="moblie" placeholder="请输入手机号">
-                        <i class="yo-ico ir">&#xe664;</i>
+                        <i class="yo-ico ir">&#xe621;</i>
                     </li>
                     <li>
-                        <i class="yo-ico il">&#xe64b;</i>
+                        <i class="yo-ico il">&#xe667;</i>
                         <input type="password" class="ti" id="password" placeholder="请设置登录密码">
-                        <i class="yo-ico ir">&#xe664;</i>
+                        <i class="yo-ico ir">&#xe621;</i>
                     </li>
                     <li>
-                        <i class="yo-ico il">&#xe661;</i>
+                        <i class="yo-ico il">&#xe64c;</i>
                         <input type="password" class="ti" id="confirm_password" placeholder="请重新输入密码">
-                        <i class="yo-ico ir">&#xe664;</i>
+                        <i class="yo-ico ir">&#xe621;</i>
                     </li>
                 </ul>
             </div>
