--- a/src/styles/modules/home.scss
+++ b/src/styles/modules/home.scss
@@ -110,7 +110,8 @@
       }
     }
     main {
-      @include flex()
+      @include flex();
+      height: 100%;
     }
     .navfooter {
       height: .57rem;
