--- a/src/styles/modules/position.scss
+++ b/src/styles/modules/position.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'yofont';
+  src: url('/iconfonts/iconfont.eot');
+  src: url('/iconfonts/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('/iconfonts/iconfont.woff') format('woff'),
+  url('/iconfonts/iconfont.ttf') format('truetype'),
+  url('/iconfonts/iconfont.svg#iconfont') format('svg');
+}
 .home-container {
   
     main {
@@ -5,6 +13,10 @@
       width: 100%;
       background: #fff;
       overflow-y: scroll;
+      .main_wrap{
+        width: 100%;
+        height: auto;
+      
       .swiper-container{
         .swiper-slide {
           width: 100%;
@@ -53,6 +65,7 @@
         }
       }
       .positon_flashTime{
+        overflow-x: hidden;
         overflow: hidden;
         background: #fff !important;
         width:100%;
@@ -75,75 +88,80 @@
              padding-left: 0.1rem;
           }
         }
-        .positon_flashTime_con{
-          background: #fff;
-          padding:0 0.06rem;
-          width: 3.75rem;
-          height: 2.17rem;
-          overflow: hidden;
-          .positon_flashTime_content{
-            float: left;
-            margin-left: 0.11rem;
-            width: 1.46rem;
-            height: 2.17rem;
-            display: flex;
+        .positon_flashTime_con1{
+          width: 100%;
+          // height: 2.17rem;
+          .positon_flashTime_con{
             background: #fff;
-            flex-direction: column;
-            div:nth-child(1){
-              margin-bottom: 0.11rem;
-              position: relative;
-              span{
-                background: #dcb687;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 0.56rem;
-                height: 0.18rem;
-                text-align: center;
-                line-height: 0.18rem;
-                font-size: 0.14rem;
-                color: #fff;
+            padding:0 0.06rem;
+            // width: auto;
+            height: 2.17rem;
+            overflow: hidden;
+            .positon_flashTime_content{
+              float: left;
+              margin-left: 0.11rem;
+              width: 1.46rem;
+              height: 2.17rem;
+              display: flex;
+              background: #fff;
+              flex-direction: column;
+              div:nth-child(1){
+                margin-bottom: 0.11rem;
+                position: relative;
+                span{
+                  background: #dcb687;
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 0.56rem;
+                  height: 0.18rem;
+                  text-align: center;
+                  line-height: 0.18rem;
+                  font-size: 0.14rem;
+                  color: #fff;
+                }
+                img{
+                  width: 1.46rem;
+                  height: auto;
+                }
+                
               }
-              img{
-                width: 1.46rem;
-                height: auto;
+              div:nth-child(2){
+                 width: 1.46rem;
+                 height: 0.6rem;
+                 display: flex;
+                 flex-direction: column;
+                 justify-content: space-around;
+                 >div{
+                  color: #bf915a;
+                  margin-bottom: 0;
+                   background: #fff4e6;
+                 height: 0.16rem;
+                 text-align: center;
+                 transform:scale(0.9);
+                 font-size:0.12rem;
+                 border-radius: 0.1rem;
+                 }
+                 p{
+                  //  padding:0.05rem 0;
+                    color: #000 !important;
+                 }
+                 span{
+                     color: #c81c28 !important;
+                     i{
+                      color: #c81c28;
+                     }
+                     del{
+                      //  font-weight: 100;
+                       color: #aaaaaa;
+                       text-decoration: line-through;
+                     }
+                 }
               }
-              
-            }
-            div:nth-child(2){
-               width: 1.46rem;
-               height: 0.6rem;
-               display: flex;
-               flex-direction: column;
-               justify-content: space-around;
-               >div{
-                color: #bf915a;
-                margin-bottom: 0;
-                 background: #fff4e6;
-               height: 0.16rem;
-               text-align: center;
-               transform:scale(0.9);
-               font-size:0.12rem;
-               border-radius: 0.1rem;
-               }
-               p{
-                //  padding:0.05rem 0;
-                  color: #000 !important;
-               }
-               span{
-                   color: #c81c28 !important;
-                   i{
-                    color: #c81c28;
-                   }
-                   del{
-                    //  font-weight: 100;
-                     color: #aaaaaa;
-                     text-decoration: line-through;
-                   }
-               }
             }
           }
         }
+        
       }
       .position_newProduct{
         background: #fff !important;
@@ -343,7 +361,7 @@
           }
         }
       }
-    .position_living{ 
+    .position_room{ 
       padding-bottom:0.3rem; 
         margin-bottom:0.05rem;   
         width: 100%;
@@ -607,4 +625,5 @@
       }
 
     }
+  }
   }
