--- a/src/scripts/views/search.html
+++ b/src/scripts/views/search.html
@@ -1,3 +1,7 @@
-<div>
-  search...
+<div class="root-class">
+  <div class="search-top"></div>
+  <div class="class-mid">
+    <div></div>
+    <div></div>
+  </div>
 </div>
