--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,4 +14,6 @@
 
 @import "./modules/adminlogo.scss";
 
-@import "./modules/register.scss"
+@import "./modules/register.scss";
+
+@import "./modules/search-class.scss";
