--- a/src/scripts/views/search.html
+++ b/src/scripts/views/search.html
@@ -1,5 +1,7 @@
 <div class="root-class">
-  <div class="search-top"></div>
+  <div class="search-top">
+    <div class="search"></div>
+  </div>
   <div class="class-mid">
     <div></div>
     <div></div>
