--- a/src/scripts/views/new-goods-list.html
+++ b/src/scripts/views/new-goods-list.html
@@ -1,5 +1,5 @@
 {{#each list}}
-<li>
+<li data-url="{{id}}">
     <div>
         <a href="##" alt="">
             <img src="//image.meilele.com/{{goods_img}}">
