--- a/src/styles/modules/profile.scss
+++ b/src/styles/modules/profile.scss
@@ -99,6 +99,95 @@
                     margin-top: .1rem;
                 }
             }
+            .mll-list{
+                width: 100%;
+                height: auto;
+                margin-top: .2rem;
+                padding-left: .1rem;
+                padding-right: .1rem;
+                background: #fff;
+                .mll-main-list{
+                    height: .95rem;
+                    width: 100%;
+                    @include border(1px 0 0 0 );
+                    @include flexbox();
+                    @include justify-content(space-around);
+                    .td1{
+                        width: .3rem;
+                        padding-top: .1rem;
+                        height: .95rem;
+                        input{
+                            display: inline-block;
+                            width: .2rem;
+                            height: .2rem;
+                            margin-top: .3rem;
+                        }
+                    }
+                    .td2{
+                        width: 1.3rem;
+                        padding-top: .1rem;
+                        height: .95rem;
+                        img{
+                            width: 1.15rem;
+                            height: .75rem;
+                            border: none;
+                            vertical-align: top;
+                            display: block;
+                        }
+                    }
+                    .td3{
+                        width: 2.05rem;
+                        padding-top: .1rem;
+                        height: .95rem;
+                        @include flexbox();
+                        @include flex-direction(column);
+                        .td-1{
+                            height: .3rem;
+                            line-height: .15rem;
+                            font-size: .13rem;
+                            color: #666;
+                        }
+                        .td-2{
+                            height: .2rem;
+                            line-height: .2rem;
+                            color: #da0000;
+                            font-size: .14rem;
+                            font-weight: 900;
+                        }
+                        .td-3{
+                            height: .25rem;
+                            span{
+                                display: inline-block;
+                                height: .25rem;
+                                width: .25rem;
+                                float: left;
+                                text-align: center;
+                                line-height: .25rem;
+                                @include border();
+                                font-weight: 900;
+                            }
+                            input{
+                                display: inline-block;
+                                height: .25rem;
+                                width: .25rem;
+                                float: left;
+                                outline: none;
+                                text-align: center;
+                                @include border(1px 0 1px 0);
+                            }
+                            i{
+                                display: inline-block;
+                                height: .25rem;
+                                width: .25rem;
+                                line-height: .25rem;
+                                font-size: .20rem;
+                                float: right;
+                                text-align: center; 
+                            }
+                        }
+                    }
+                }
+            }
         }
         .mll-footer{
             height:1.21rem;
