--- a/src/scripts/views/profileshop.html
+++ b/src/scripts/views/profileshop.html
@@ -1,3 +1,21 @@
-<div>
-    haha
+<div class="mll-list">
+    <div class=""></div>
+    <div class="mll-main-list">
+        <div class="td1">
+            <input type="checkbox" name="" id="" />
+        </div>
+        <div class="td2">
+            <img src="./images/book3.jpg" alt="">
+        </div>
+        <div class="td3">
+            <div class="td-1">优雅弧形桌脚 餐厅1.4米长餐桌套装（1桌+4椅）</div>
+            <span class="td-2">¥6220.00</span>
+            <div class="td-3">
+                <span>-</span>
+                <input type="text" value="1">
+                <span>+</span>
+                <i class="yo-ico">&#xe645;</i>
+            </div>
+        </div>
+    </div>
 </div>
