--- a/src/styles/modules/search-class.scss
+++ b/src/styles/modules/search-class.scss
@@ -1,24 +1,70 @@
 .root-class {
     width: 100%;
+    height: 100%;
     background: #ffffff;
     @include flexbox();
+    @include flex-direction(column);
     .search-top {
-        height: 0.4rem;
+        width: 100%;
+        height: 0.45rem;
         background: #fff;
-        @include border(1px, #dfdfdf, solid);
+        z-index: 20;
+        @include border(0 0 1px 0, #dfdfdf, solid);
         @include flexbox();
         @include justify-content(center);
         @include align-items();
-        @include flex();
         .search {
             width: 3.44rem;
             height: 0.3rem;
             background: #eee;
+            @include flexbox();
             @include border-radius(0.05rem);
         }
     }
     .class-mid {
         width: 100%;
         height: 100%;
+        @include flexbox();
+        .class-mid-left {
+            @include flex(1);
+            @include border(0 1px 0 0, #dfdfdf, solid);
+            ul {
+                width: 100%;
+                height: 101%;
+            }
+            ul li {
+                height: 0.29rem;
+                padding: 0.23rem 0;
+                line-height: 0.52rem;
+                text-align: center;
+                font-size: 0.14rem;
+                color: #636363;
+                i {
+                    width: 0.02rem;
+                    height: 0.29rem;
+                    float: left;
+                    margin: 0.115rem 0 0;
+                    background: #ffffff;
+                }
+            }
+            ul li.current {
+                font-size: 0.17rem;
+                color: #c81c28;
+                i {
+                    background: #c81c28;
+                }
+            }
+        }
+        .class-mid-right {
+            @include flex(3);
+            .content {
+                padding: 0.14rem 0.14rem 0;
+                div:first-child {
+                    a img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
     }
 }
