完善购物车

--- a/src/scripts/views/details.html
+++ b/src/scripts/views/details.html
@@ -73,7 +73,7 @@
             <i class="iconfont">&#xe665;</i>
             <span>客服</span>
         </li>
-        <li>加入购物车</li>
+        <li id="gocar">加入购物车</li>
         <li>获取门店地址</li>
     </ul>
 </nav>
