--- a/src/styles/modules/search-class.scss
+++ b/src/styles/modules/search-class.scss
@@ -33,22 +33,21 @@
                 height: 101%;
             }
             ul li {
-                height: 0.29rem;
-                padding: 0.23rem 0;
-                line-height: 0.52rem;
+                height: 0.5rem;
+                padding: 0.1rem 0;
+                line-height: 0.3rem;
                 text-align: center;
                 font-size: 0.14rem;
                 color: #636363;
                 i {
                     width: 0.02rem;
-                    height: 0.29rem;
+                    height: 0.3rem;
                     float: left;
-                    margin: 0.115rem 0 0;
                     background: #ffffff;
                 }
             }
             ul li.current {
-                font-size: 0.17rem;
+                font-size: 0.16rem;
                 color: #c81c28;
                 i {
                     background: #c81c28;
@@ -56,8 +55,11 @@
             }
         }
         .class-mid-right {
+            height: 100%;
             @include flex(3);
             .content {
+                width: 100%;
+                height: 101%;
                 padding: 0.14rem 0.14rem 0;
                 div:first-child {
                     a img {
